--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             InnoArk | 2022 - Present<br>
             <h3>Software Quality Assurance</h3>
             <ul>
-                <li>Collaborate with cross-functional teams in an environment using agile Methodology<br>
+                <li>Collaborate with cross-functional teams in an environment using agile methodology<br>
                 with scrum framework.</li>
                 <li>Conduct the role of rotating scrum master periodically.</li>
                 <li>Contribute in initial project planning by assigning user story from QA perspective.</li>
@@ -99,6 +99,7 @@
         <ul>
             <li><a href="./public/Hobby.html">My Hobbies</a></li>
             <li><a href="./public/contact.html">Contact</a></li>
+            <li><a href="./public/htmlproject.html">HTML Project</a></li>
         </ul>
 
         <footer>
