--- a/public/contact.html
+++ b/public/contact.html
@@ -1,4 +1,12 @@
-<h1>Contact Me</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>My Contact</title>
+  </head>
+
+  <body>
+    <h1>Contact Me</h1>
 <p>Tel: +65 9351 2587 / +62 813 6331 2136</p>
 <p>Email: leonardoalfryancius@gmail.com</p>
 <p>LinkedIn: <a href="https://www.linkedin.com/in/alfryancius" target="_blank">Alfryancius Situmorang</a></p>
@@ -12,3 +20,5 @@
   Queenstown <br>
   Singapore <br>
 </p>
+  </body>
+</html>
